test/fail/import-component.mo
import P = "mo:⛔";

ignore P.callComponent(123);

assert false;
